--- a/package.json
+++ b/package.json
@@ -12,24 +12,20 @@
     "start": "next start",
     "start:test": "cp .env.test .env && next start -p 3001",
     "start:live": "cp .env.live .env && next start",
-    
     "live": "npm run build:live && pm2 start ecosystem.config.js --only kazipert-live",
     "live:start": "pm2 start ecosystem.config.js --only kazipert-live",
     "live:stop": "pm2 stop kazipert-live",
     "live:restart": "pm2 restart kazipert-live",
     "live:logs": "pm2 logs kazipert-live",
     "live:monit": "pm2 monit kazipert-live",
-    
     "test:dev": "npm run dev:test",
     "test:build": "npm run build:test",
-    
     "pm2:setup": "npm run build:live && pm2 start ecosystem.config.js",
     "pm2:stop": "pm2 stop all",
     "pm2:restart": "pm2 restart all",
     "pm2:delete": "pm2 delete all",
     "pm2:list": "pm2 list",
     "pm2:logs": "pm2 logs",
-    
     "db:push": "prisma db push",
     "db:push:test": "dotenv -e .env.test -- prisma db push",
     "db:push:live": "dotenv -e .env.live -- prisma db push",
@@ -39,7 +35,6 @@
     "db:reset": "prisma migrate reset",
     "db:reset:test": "dotenv -e .env.test -- prisma migrate reset",
     "db:reset:live": "dotenv -e .env.live -- prisma migrate reset",
-    
     "env:test": "cp .env.test .env",
     "env:live": "cp .env.live .env",
     "env:show": "echo \"Current environment:\" && head -n 3 .env"
@@ -76,6 +71,7 @@
     "@radix-ui/react-tooltip": "1.1.6",
     "@vercel/analytics": "latest",
     "autoprefixer": "^10.4.20",
+    "axios": "^1.13.2",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
@@ -85,6 +81,7 @@
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
     "follow-redirects": "^1.15.11",
+    "form-data": "^4.0.4",
     "framer-motion": "^12.23.24",
     "geist": "latest",
     "input-otp": "1.4.1",
@@ -103,6 +100,7 @@
     "react-hook-form": "^7.60.0",
     "react-phone-input-2": "^2.15.1",
     "react-resizable-panels": "^2.1.7",
+    "react-webcam": "^7.2.0",
     "recharts": "2.15.4",
     "resend": "^6.1.3",
     "sonner": "^1.7.4",
