--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "lucide-react": "^0.454.0",
     "next": "16.0.1",
     "next-themes": "^0.4.6",
+    "node-fetch": "^2.7.0",
     "nodemailer": "^7.0.9",
     "prisma": "^6.17.1",
     "react": "^18",
