--- a/package.json
+++ b/package.json
@@ -69,11 +69,13 @@
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
+    "@types/canvas-confetti": "^1.9.0",
     "@vercel/analytics": "latest",
     "autoprefixer": "^10.4.20",
     "axios": "^1.13.2",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
+    "canvas-confetti": "^1.9.4",
     "class-variance-authority": "^0.7.1",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
@@ -94,6 +96,7 @@
     "node-fetch": "^2.7.0",
     "nodemailer": "^7.0.9",
     "prisma": "^6.17.1",
+    "puppeteer": "^24.31.0",
     "react": "^18",
     "react-confetti": "^6.4.0",
     "react-day-picker": "9.8.0",
@@ -101,14 +104,18 @@
     "react-hook-form": "^7.60.0",
     "react-phone-input-2": "^2.15.1",
     "react-resizable-panels": "^2.1.7",
+    "react-signature-canvas": "^1.1.0-alpha.2",
     "react-webcam": "^7.2.0",
     "recharts": "2.15.4",
     "resend": "^6.1.3",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "sonner": "^1.7.4",
     "swiper": "^12.0.3",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.9",
+    "xlsx": "^0.18.5",
     "zod": "3.25.67",
     "zustand": "^5.0.8"
   },
@@ -119,6 +126,8 @@
     "@types/nodemailer": "^7.0.2",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-signature-canvas": "^1.0.7",
+    "@types/uuid": "^10.0.0",
     "dotenv-cli": "^11.0.0",
     "postcss": "^8.5",
     "tailwindcss": "^4.1.9",
