--- a/package.json
+++ b/package.json
@@ -128,6 +128,7 @@
     "@types/react-dom": "^18",
     "@types/react-signature-canvas": "^1.0.7",
     "@types/uuid": "^10.0.0",
+    "baseline-browser-mapping": "^2.8.32",
     "dotenv-cli": "^11.0.0",
     "postcss": "^8.5",
     "tailwindcss": "^4.1.9",
