--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,9 @@ pgdata/
 pgdata_live/
 pgdata_test/
 
+/.idea/modules.xml
+/.idea/jpa-buddy.xml
+/.idea/Kazipert_next.iml
+/.idea/misc.xml
+/.idea/vcs.xml
+/~$Kazipert Salary Calculator.xlsx
