Feat: Ignore generated files.

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,4 @@ pgdata_test/
 /.idea/vcs.xml
 /~$Kazipert Salary Calculator.xlsx
 /./public/contracts/**
+/public/contracts/contract-KZ-EMP-OX5R1.pdf
