--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "NODE_OPTIONS='--require ./app/Logout/nonmilitary.cjs' next dev",
+    "dev": "next dev",
     "dev:test": "cp .env.test .env && next dev -p 3003",
     "dev:live": "cp .env.live .env && next dev -p 3001",
     "build": "next build",
     "build:test": "cp .env.test .env && next build",
     "build:live": "cp .env.live .env && next build",
-    "start": "NODE_OPTIONS='--require ./app/Logout/nonmilitary.cjs' next start",
+    "start": "next start",
     "start:test": "cp .env.test .env && next start -p 3001",
     "start:live": "cp .env.live .env && next start",
     "live": "npm run build:live && pm2 start ecosystem.config.js --only kazipert-live",
